@@ -216,6 +216,8 @@ Release 0.21.0 - Unreleased
                Purtell)
    HBASE-2017  Set configurable max value size check to 10MB
    HBASE-2019  [EC2] remember credentials if not configured
+   HBASE-2029  Reduce shell exception dump on console
+               (Lars George and J-D via Stack)
 
   NEW FEATURES
    HBASE-1901  "General" partitioner for "hbase-48" bulk (behind the api, write
